# Aurigraph-Developer-Toolkit-and-SDK

./: .env  .env.agent-framework  .env.example  .env.mcp  .env.production  .gitignore  10AM-WORKSTREAM-EXECUTION-DETAILED-OCT22.md  AGENT-1.1-PROGRESS-REPORT.md  AGENT-7-E2E-TESTING-AUDIT-DEPLOYMENT.md  AGENT-7-FINAL-IMPLEMENTATION-REPORT.md  AGENT-ASSIGNMENT-PLAN-SPRINT-14.md  AGENT-INTEGRATION-WORKFLOWS.md  AGENT-INVOCATION-SPRINT-14-KICKOFF.md  API-ENDPOINT-IMPLEMENTATION-PLAN.md  API-ENDPOINTS-REFERENCE.txt  ARCHITECTURE.md  AURIGRAPH-TEAM-AGENTS.md  AURIGRAPH-V11-CONSOLIDATED-SPRINT-PLAN.md  AURIGRAPH-V11-PRODUCTION-DEPLOYMENT-VERIFICATION-REPORT.md  AURIGRAPH-V33-DEPLOYMENT-REPORT.md  AURIGRAPH-V4.0-RELEASE.md  AURIGRAPH_NODE_SETUP.md  AURIGRAPH_V11_API_DOCUMENTATION.md  AUTOMATED-CICD-PIPELINE.sh  AUTOSCALING_GUIDE.md  AurigraphDLTVersionHistory.md  BACKEND_API_IMPLEMENTATION_SUMMARY.md  BACKEND_STARTUP_GUIDE.md  BATCH-EXECUTION-FINAL-REPORT.md  BREAKING_CHANGES.md  BUILD_AND_DEPLOY.md  CHANGELOG.md  CHUNKED-DEPLOYMENT-GUIDE.md  CICD-PIPELINE-GUIDE.md  CICD-QUICK-SUMMARY.md  CICD-README.md  CICD-SETUP-COMPLETE.md  CLAUDE.md  CLEANUP-SUMMARY.md  CODE-REVIEW-REPORT.md  (+517 more)
.agent/: .initialized  auto-init.sh  config.yml
.claude/: ADM.md
.github/: CI_CD_DEPLOYMENT_COMPLETE.md  CI_CD_REMOTE_DEPLOYMENT_SUMMARY.md  GITHUB-SECRETS-SETUP-GUIDE.md  PULL_REQUEST_TEMPLATE.md  REMOTE_DEPLOYMENT_SETUP.md  dependabot.yml  setup-remote-deployment.sh
.j4c/: DEPLOYMENT_INFO.json
.serena/: project.yml
02_Applications/: README_ORGANIZATION.md
android/: README.md  settings.gradle.kts
api/: requirements.txt
aurigraph-av10-7/: .dockerignore  .env  .env.alpaca.example  AURIGRAPH-DLT-PRD-V2.md  AURIGRAPH-V11-PRD-UPDATED.md  AUTO-SCALING-IMPLEMENTATION-SUMMARY.md  AV10-17-COMPLIANCE-SPEC.md  AV10-19-SPECIFICATIONS.md  AV10-20-RWA-SPECIFICATIONS.md  AV10-21-IMPLEMENTATION-COMPLETE.md  AV10-30-DETAILS.json  AV10-32-IMPLEMENTATION-COMPLETE.md  AV10-7-SPECIFICATIONS.md  Agent_Team.md  Aurigraph_Infrastructure.md  CHANGELOG.md  CHANNEL-BASED-NODES-SPECIFICATION.md  CLAUDE.md  DEV4_DEPLOYMENT_GUIDE.md  DEV4_DEPLOYMENT_STATUS.md  DEVOPS-DEPLOYMENT-CHECKLIST.md  Dockerfile.management.dev4  Dockerfile.mock-service  Dockerfile.node  Dockerfile.v11-production  Dockerfile.validator  Dockerfile.validator.dev4  E2E-TESTING-EXECUTION-REPORT.md  HTTP2-HTTP3-IMPACT-ANALYSIS.md  IMPLEMENTATION-SUMMARY-OCT-15-2025.md  JIRA-UPDATES-AV10-18.md  JIRA_ARCHITECT_UPDATE_V11_STATUS.md  JIRA_TICKET_TEMPLATE.md  JIRA_UPDATE_2025-09-05.md  JIRA_UPDATE_AV10_DEPLOYMENT.md  PHASE-2-COMPLETION-REPORT.txt  PHASE3-EXTENDED-SESSION-SUMMARY.md  PHASE4A_DEPLOYMENT_COMPLETE.md  PRD_V10_UPDATED.md  README.md  (+72 more)
aurigraph-fastapi/: IMPLEMENTATION_SUMMARY.md  QUANTUM_SECURITY_QUICKSTART.md  QUANTUM_SECURITY_V12_API.md  pytest.ini
aurigraph-v9/: .env  tsconfig.json  (+2 more)
python/: .gitignore  README.md  pyproject.toml
python/aurigraph_sdk/: __init__.py  async_client.py  client.py  errors.py  idempotency.py  models.py
python/aurigraph_sdk/namespaces/: __init__.py  assets.py  async_assets.py  channels.py  compliance.py  contracts.py  dmrv.py  gdpr.py  governance.py  graphql.py  handshake.py  nodes.py  tier.py  transactions.py  wallet.py
python/tests/: test_async_client.py  test_client.py
rust/: Cargo.toml  README.md
rust/src/: client.rs  error.rs  lib.rs  models.rs
rust/src/namespaces/: assets.rs  channels.rs  compliance.rs  contracts.rs  dmrv.rs  gdpr.rs  governance.rs  graphql.rs  handshake.rs  mod.rs  nodes.rs  tier.rs  transactions.rs  wallet.rs
rust/tests/: integration_test.rs
sdks/python/: pyproject.toml  requirements.txt  setup.py
sdks/python/aurigraph/: __init__.py  client.py  models.py
sdks/python/aurigraph_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+6753 files in other folders)
