[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aurigraph-sdk"
version = "1.3.0"
description = "Official Python SDK for Aurigraph DLT V12 (V11 API)"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
authors = [
    { name = "Aurigraph DLT Corp", email = "sdk@aurigraph.io" },
]
keywords = ["aurigraph", "dlt", "blockchain", "sdk", "rwa", "tokenization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/Aurigraph-DLT-Corp/Aurigraph-Developer-Toolkit-and-SDK"
Documentation = "https://dlt.aurigraph.io/docs/sdk/python"
Repository = "https://github.com/Aurigraph-DLT-Corp/Aurigraph-Developer-Toolkit-and-SDK"

[tool.hatch.build.targets.wheel]
packages = ["aurigraph_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
