[package]
name = "aurigraph-sdk"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for Aurigraph DLT V12 (V11 API)"
license = "Proprietary"
repository = "https://github.com/Aurigraph-DLT-Corp/Aurigraph-Developer-Toolkit-and-SDK"
readme = "README.md"
keywords = ["blockchain", "dlt", "aurigraph", "sdk"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
