[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurigraph-sdk"
version = "1.0.0"
description = "Python SDK for Aurigraph V11 blockchain"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Aurigraph Team", email = "dev@aurigraph.io"}
]
keywords = ["aurigraph", "blockchain", "dlt", "sdk", "python", "async"]

dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/Aurigraph-DLT-Corp/Aurigraph-DLT"
Repository = "https://github.com/Aurigraph-DLT-Corp/Aurigraph-DLT"
Documentation = "https://docs.aurigraph.io"

[tool.setuptools]
packages = ["aurigraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
